--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body {
 }
 
 .header {
-    background-image: url(4.png);
+    background-image: url(./assets/4.png);
     height: 100vh;
     background-repeat: no-repeat;
     background-size: cover;
@@ -250,7 +250,7 @@ body {
     left: 481px;
 }
 .black-block {
-    background-image: url(bg.png);
+    background-image: url(./assets/bg.png);
     padding: 80px 0;
     margin-top: 80px;
 }
@@ -311,7 +311,7 @@ body {
     margin-bottom: 29px;
 }
 .menu {
-    background-image: url(bar.png);
+    background-image: url(./assets/bar.png);
     background-repeat: no-repeat;
     background-size: cover;
     padding-bottom: 100px;
